--- a/styles/index.css
+++ b/styles/index.css
@@ -136,9 +136,10 @@ main .cards .card p.card_numero{
 }
 
 .img-fib {
-    width: 50rem;
-    height: 35rem;
+    width: 30rem;
+    height: 15rem;
     border-radius: 20px;
-    margin-bottom: 4rem;
+    margin-left: 5rem;
+    margin-top: 3rem;
 }
 
